# teaching_SoSe26_mobHumAni_exercises

./: LICENSE  README.md  env.yml  pyproject.toml
.cora/analytics/: index.json
data/: LS1_190_1_2.txt  LS1_190_3_2.txt  SS1_190_1_2.txt  random_walker.csv  random_walker2D.csv
notebooks/: Session1.ipynb  Session1_solution.ipynb  bacteria_movement.ipynb  data_analysis_template.ipynb  session2_run_n_tumble.ipynb  session2_run_n_tumble_path_I_solution.ipynb  session3_run_n_tumble_path_II_solution.ipynb
sandbox/: metrics.py  random_walk.py  random_walk2D.py
src/mobha/: __init__.py  generator.py
